# search_term_analyzer

./: .gitignore  README.md  file-tree.txt  pyproject.toml  requirements.txt  setup_github.ps1
src/: __init__.py
src/search_term_analyzer/api/: __init__.py  endpoints.py  models.py  server.py
src/search_term_analyzer/core/: __init__.py  config.py  constants.py  exceptions.py
src/search_term_analyzer/distributed/: __init__.py  client.py  worker.py
src/search_term_analyzer/models/: __init__.py  analysis.py  feedback.py  metrics.py
src/search_term_analyzer/pipeline/: __init__.py  analyzer.py  cache.py  optimizer.py  processor.py
src/search_term_analyzer/utils/: __init__.py  logging.py  monitoring.py  validation.py
